place icons and link it/email bar/bottom icon and bug fixed image alignment

--- a/assets/styleSheet/body.css
+++ b/assets/styleSheet/body.css
@@ -5,13 +5,14 @@ Time :7:12 PM
 */
 
 /*====Redesign ScrollBar=====*/
-::-webkit-scrollbar{
+::-webkit-scrollbar {
     background: #192F35;
     width: 0.5em;
     height: 0.5em;
 
 }
-::-webkit-scrollbar-track{
+
+::-webkit-scrollbar-track {
     background: #192F35;
     border-radius: 100vw;
 
@@ -19,13 +20,16 @@ Time :7:12 PM
     /*margin-block: 2em;*/
 
 }
-::-webkit-scrollbar-thumb{
-    background: linear-gradient(rebeccapurple,blue);
+
+::-webkit-scrollbar-thumb {
+    background: linear-gradient(rebeccapurple, blue);
     border-radius: 100vw;
 }
-::-webkit-scrollbar-thumb:hover{
-    background: linear-gradient(blue,rebeccapurple);
+
+::-webkit-scrollbar-thumb:hover {
+    background: linear-gradient(blue, rebeccapurple);
 }
+
 /*==========================PAGE 01=======================*/
 .page01Background {
     position: absolute;
@@ -35,7 +39,7 @@ Time :7:12 PM
     fill: #192F35;
 }
 
-.pg1Hello{
+.pg1Hello {
     position: absolute;
     top: 265px;
     left: 160px;
@@ -44,9 +48,10 @@ Time :7:12 PM
     font-family: "Inika";
     color: #ffffff;
 }
-.pg1Hasitha{
+
+.pg1Hasitha {
     position: absolute;
-    top:250px;
+    top: 250px;
     left: 50px;
     z-index: 1;
     color: #BA903A;
@@ -56,7 +61,7 @@ Time :7:12 PM
 
 }
 
-.pg1Im{
+.pg1Im {
     position: absolute;
     top: 265px;
     left: 700px;
@@ -65,14 +70,15 @@ Time :7:12 PM
     font-family: "Inika";
     color: #ffffff;
 }
-.pg1Lakshan{
+
+.pg1Lakshan {
     position: absolute;
-    top:250px;
+    top: 250px;
     left: 500px;
     z-index: 1;
     color: #192F35;
     font-size: 128px;
-    -webkit-text-stroke:1px #BA903A;
+    -webkit-text-stroke: 1px #BA903A;
     font-family: "DM Serif Display";
     font-weight: bold;
 }
@@ -88,9 +94,9 @@ Time :7:12 PM
 }
 
 
-.btnContactMe{
+.btnContactMe {
     position: absolute;
-    top:475px;
+    top: 475px;
     left: 60px;
     z-index: 1;
 
@@ -113,7 +119,7 @@ Time :7:12 PM
     text-decoration: none;
 }
 
-.btnContactMe:hover{
+.btnContactMe:hover {
 
     /*Button*/
     background-color: #BA903A;
@@ -132,12 +138,12 @@ Time :7:12 PM
     color: #ffffff;
     text-align: center;
     text-decoration: none;
-    box-shadow: 0 12px 16px 0 rgba(223,233,245,0.4), 0 17px 50px 0 rgba(223,233,245,0.4);
+    box-shadow: 0 12px 16px 0 rgba(223, 233, 245, 0.4), 0 17px 50px 0 rgba(223, 233, 245, 0.4);
 }
 
-.btnSeeMore{
+.btnSeeMore {
     position: absolute;
-    top:475px;
+    top: 475px;
     left: 300px;
     z-index: 1;
 
@@ -160,7 +166,7 @@ Time :7:12 PM
     text-decoration: none;
 }
 
-.btnSeeMore:hover{
+.btnSeeMore:hover {
 
     /*Button*/
     background-color: #BA903A;
@@ -180,17 +186,98 @@ Time :7:12 PM
     text-align: center;
     text-decoration: none;
 
-    box-shadow: 0 12px 16px 0 rgba(223,233,245,0.4), 0 17px 50px 0 rgba(223,233,245,0.4);
+    box-shadow: 0 12px 16px 0 rgba(223, 233, 245, 0.4), 0 17px 50px 0 rgba(223, 233, 245, 0.4);
 
 }
 
 /*icons*/
+.github {
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    top: 100px;
+    left: 1450px;
+    z-index: 1;
+}
+
+.inst {
+    position: absolute;
+    top: 165px;
+    left: 1452px;
+    width: 30px;
+    height: 30px;
+    z-index: 1;
+}
+
+.whatsapp {
+    position: absolute;
+    top: 230px;
+    left: 1450px;
+    width: 35px;
+    height: 35px;
+    z-index: 1;
+}
+
+.linkedIn {
+    position: absolute;
+    top: 300px;
+    left: 1450px;
+    width: 35px;
+    height: 35px;
+    z-index: 1;
+}
+
+.twitter {
+    position: absolute;
+    top: 370px;
+    left: 1450px;
+    width: 35px;
+    height: 35px;
+    z-index: 1;
+}
+.email{
+    position: absolute;
+    width: 205px;
+    height: 20px;
+    left: 1365px;
+    top: 530px;
+
+    font-family: "Esteban";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.1em;
+
+    color: #FFFFFF;
+
+    transform: rotate(90deg);
+    z-index:1;
+}
+
+.line{
+    position: absolute;
+    top: 690px;
+    left: 1409px;
+    z-index: 1;
+    color: white;
+    transform: rotate(90deg);
+    width: 7em;
+}
+
+.falcon{
+    position: absolute;
+    top:700px;
+    left: 750px;
+    z-index: 1;
+}
+
 
 
 /*======================PAGE 02=====================*/
 
-.headUnder{
-    position: relative;
-    top: 0;
+.headUnder {
+    position: absolute;
+    top: 753px;
     left: 0;
 }
